<resources>
    <string name="app_name">MyDoctor</string>

    <string name="label_login">Inicio de sesion</string>
    <string name="label_register">Registro de usuarios</string>


    <string name="btn_login">Acceder</string>
    <string name="btn_register">REGISTRAR</string>


    <string name="label_name_lastname">Nombre y apellido</string>
    <string name="label_dni">Dni</string>
    <string name="label_confirm_password">Confirmar password</string>
    <string name="label_email">Correo</string>
    <string name="label_password">password</string>

    <string name="label_to_go_login">Login</string>
    <string name="label_go_to_register">Aun no tienes una cuenta?</string>

    <string name="please_fill_your_register">Por favor completa tus datos</string>
    <string name="btn_create_appointment">Reservar cita</string>
    <string name="btn_my_appointments">Mis citas</string>
    <string name="btn_logout">Cerrar sesion</string>
    <string name="label_welcome">Bienvenido</string>
    <string name="label_register_appointment">Reservar cita</string>
    <string name="label_description_appointment">Descripcion</string>
    <string name="label_specialty">Especialidad</string>
    <string name="label_type">Tipo de cita</string>
    <string name="type1">Consulta</string>
    <string name="type2">Examen</string>
    <string name="type3">Operacion</string>
    <string name="btn_next">Siguiente</string>
    <string name="label_doctor">Medico</string>
    <string name="label_scheduled_date">Fecha para la cita</string>
    <string name="btn_confirm">Confirmar cita</string>

    <string name="date_format">%1$d-%2$s-%3$s</string>
    
    <string name="item_appointment_id">Cita medica %1$d</string>
    <string name="item_appointment_date">Atencion el dia %1$s</string>
    <string name="item_appointment_time">A las %1$s</string>
    <string name="label_my_appointments">Mis citas medicas</string>
    <string name="press_back_again">Presione una vez mas para salir</string>
    <string name="dialog_create_appointment_exit_tile">Estas seguro que deseas salir?</string>
    <string name="dialog_create_appointment_exit_message">Si abandonas el registro, los datos que habias ingresado se perderan.</string>
    <string name="dialog_create_appointment_positive_button">Si, salir</string>
    <string name="dialog_create_appointment_exit_canceled">Continuar registro</string>
    <string name="validate_appointment_description">La descripcion es demasiado corta</string>
    <string name="label_confirm_appointment_data">RESUMEN DE CITA</string>
        <string name="label_description_appointments">Descripcion</string>
    <string name="label_type_consult">TIpo consulta</string>
    <string name="label_scheduled_date_appointments">Fecha para la cita</string>
    <string name="label_scheduled_date_appointment">Hora de cita</string>
    <string name="validate_appointment_date">Es necesario seleccionar una fecha</string>
    <string name="validate_appointment_time">Seleccione una hora de atencion</string>
    <string name="error_loading_especialty">Ocurrio un problema de red</string>
    <string name="error_loading_doctors">Ocurrio un problema al cargar los medicos</string>
    <string name="label_select_doctor_and_date">Seleccione un medico y una fecha para ver sus horas disponibles</string>
    <string name="label_not_available_date">No hay horas disponibles, pruebe seleccionando otro dia.</string>
    <string name="error_login_response">Se obtuvo una respuesta inesperada del servidor</string>
    <string name="error_invalid_credentials">Las credenciales son invalidas</string>
    <string name="error_entry_credentials">Por favor ingrese un correo y password</string>

    <string name="label_created_at">Esta cita se genero el dia %1$s con la siguiente descripcion: </string>
    <string name="default_notification_channel_id">defualt_chanel</string>

</resources>