<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:background="@drawable/ic_login"
    android:orientation="vertical"
    tools:context=".ui.RegisterActivity" >

    <TextView
        android:background="@color/transparent"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/label_register"
        android:textStyle="bold|italic"

        />

    <LinearLayout
        android:background="@color/transparent"
        android:padding="8dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textStyle="bold|italic"
            android:text="@string/label_name_lastname"/>

        <EditText
            android:id="@+id/etRegisterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textStyle="bold|italic"
            android:text="@string/label_email"/>

        <EditText
            android:id="@+id/etRegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textStyle="bold|italic"
            android:text="@string/label_dni"/>

        <EditText
            android:id="@+id/etRegisterDni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>


        <TextView
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold|italic"
            android:text="@string/label_password"/>

        <EditText
            android:id="@+id/etRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

        <TextView
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold|italic"
            android:text="@string/label_confirm_password"/>

        <EditText
            android:id="@+id/etRegisterPasswordConfirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btnConfirmRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold|italic"
            android:textColor="@color/white"
            android:background="@drawable/custom_button"
            android:text="@string/btn_register" />

        <TextView
            android:id="@+id/tvGoToLogin"
            android:textStyle="bold|italic"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/label_to_go_login" />


    </LinearLayout>

</LinearLayout>