<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_login"
    android:gravity="center"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".CreateAppointmentActivity">

    <TextView
        android:paddingTop="12dp"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="60dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/label_register_appointment"
        android:textStyle="bold|italic"

        />

    <android.support.v7.widget.CardView
        android:visibility="gone"
        app:contentPadding="12dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/label_description_appointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

            <TextView
                android:text="@string/label_specialty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />




            <TextView
                android:text="@string/label_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="8dp">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type1" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type2" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type3" />
            </RadioGroup>

            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_doctor"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_scheduled_date"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:textStyle="bold|italic"
                android:textColor="@color/white"
                android:background="@drawable/custom_button"
                android:text="@string/btn_next"
                android:paddingStart="10dp"
                android:drawableEnd="@drawable/ic_next"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>


    </android.support.v7.widget.CardView>





    <android.support.v7.widget.CardView
        app:contentPadding="12dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_doctor"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_scheduled_date"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:textStyle="bold|italic"
                android:textColor="@color/white"
                android:background="@drawable/custom_button"
                android:text="@string/btn_next"
                android:paddingStart="10dp"
                android:drawableEnd="@drawable/ic_next"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>