<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:background="@drawable/ic_login"
    android:orientation="vertical"
    tools:context=".ui.MenuActivity" >

    <TextView
        android:background="@color/transparent"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/label_welcome"
        android:textStyle="bold|italic"

        />

    <LinearLayout
        android:background="@color/transparent"
        android:padding="8dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnCreateAppointment"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold|italic"
            android:textColor="@color/white"
            android:background="@drawable/custom_button"
            android:text="@string/btn_create_appointment"
            android:drawableStart="@drawable/ic_add_circule"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btnMyAppointments"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold|italic"
            android:textColor="@color/white"
            android:background="@drawable/custom_button"
            android:text="@string/btn_my_appointments"
            android:drawableStart="@drawable/ic_schedule"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry" />
        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold|italic"
            android:textColor="@color/white"
            android:background="@drawable/custom_button"
            android:text="@string/btn_logout"
            android:paddingStart="10dp"
            android:drawableStart="@drawable/ic_power_off"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

</LinearLayout>